force-app/main/default/objects/LocationProduct__c/LocationProduct__c.object-meta.xml
<CustomObject>
    <label>Location Product</label>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Location Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>