force-app/main/default/objects/LocationProduct__c/fields/EndingCount__c.field-meta.xml
<CustomField>
    <fullName>EndingCount__c</fullName>
    <label>Ending Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>