force-app/main/default/objects/LocationProduct__c/fields/SaleCount__c.field-meta.xml
<CustomField>
    <fullName>SaleCount__c</fullName>
    <label>Sale Count</label>
    <summarizedField>LoadProduct__c.Quantity__c</summarizedField>
    <summaryForeignKey>LoadProduct__c.Product__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>