force-app/main/default/objects/LocationProduct__c/fields/StartingCount__c.field-meta.xml
<CustomField>
    <fullName>StartingCount__c</fullName>
    <label>Starting Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>